# pokedex

./: Cargo.toml  README.md  database.sqlite
doc/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md
src/: main.rs
src/api/: create_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/cli/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs
src/repositories/: pokemon.rs
src/repositories/pokemon/: airtable.rs  memory.rs  mod.rs  sqlite.rs
tests/: play.js  req.py
