[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1", features = ["derive"] }
dialoguer = "0.10"
rusqlite = "0.27"
ureq = { version = "2.4", features = ["json"] }